--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,6 @@ theme: just-the-docs
 
 url: https://qin-work.github.io/Benchmate_doc_ccm
 
+aux_links:
+  "Template Repository":
+    - https://github.com/qin-work/Benchmate_doc_ccm
