--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,6 @@ url: https://qin-work.github.io/Benchmate_doc_ccm
 aux_links:
   "Template Repository":
     - https://github.com/qin-work/Benchmate_doc_ccm
+
+plugins:
+  - jekyll-default-layout
