--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,7 @@ title: CCM BenchMate
 theme: just-the-docs
 plugins:
   - just-the-docs
+
+url: https://qin-work.github.io/Benchmate_doc_ccm
+aux_links: 
+  Template Repository: https://github.com/qin-work/Benchmate_doc_ccm
