--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,7 @@ plugins:
 url: https://qin-work.github.io/Benchmate_doc_ccm
 aux_links: 
   Template Repository: https://github.com/qin-work/Benchmate_doc_ccm
+
+remote_theme: just-the-docs/just-the-docs@main
+plugins:
+  - jekyll-remote-theme
