--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,31 +1,35 @@
-name: Build and Deploy Jekyll Site to GitHub Pages
+name: Build and Deploy Jekyll Site
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        
-      - name: Setup Ruby
+      - uses: actions/checkout@v4
+      
+      - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.1'
           bundler-cache: true
           
-      - name: Build with Jekyll
+      - name: Install dependencies
         run: |
-          bundle exec jekyll build
+          gem install bundler -v 2.4.22
+          bundle config path vendor/bundle
+          bundle install
           
+      - name: Build with Jekyll
+        run: bundle exec jekyll build
+        
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: '_site/'
-          
+          path: './_site'
+
   deploy:
     needs: build
     permissions:
@@ -37,4 +41,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v3
+        uses: actions/deploy-pages@v4
