--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,35 +1,23 @@
-name: Build and Deploy Jekyll Site
-
+name: Build and Deploy
 on:
   push:
     branches: ["main"]
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
+      - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.1'
           bundler-cache: true
-          
-      - name: Install dependencies
-        run: |
-          gem install bundler -v 2.4.22
+      - run: |
           bundle config path vendor/bundle
           bundle install
-          
-      - name: Build with Jekyll
-        run: bundle exec jekyll build
-        
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+          bundle exec jekyll build
+      - uses: actions/upload-pages-artifact@v2
         with:
-          path: './_site'
-
+          path: ./_site
   deploy:
     needs: build
     permissions:
@@ -40,5 +28,4 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v4
+      - uses: actions/deploy-pages@v4
