--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -2,6 +2,11 @@ name: Build and Deploy
 on:
   push:
     branches: ["main"]
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -9,20 +14,15 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.1'
+          ruby-version: '3.1'  # Matches GH Pages' Ruby version
           bundler-cache: true
-      - run: |
-          bundle config path vendor/bundle
-          bundle install
-          bundle exec jekyll build
+      - run: bundle exec jekyll build --trace
       - uses: actions/upload-pages-artifact@v2
         with:
-          path: ./_site
+          path: '_site/'
+
   deploy:
     needs: build
-    permissions:
-      pages: write
-      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
