--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,14 @@
 title: CCM BenchMate
-theme: just-the-docs
-plugins:
-  - just-the-docs
-
 url: https://qin-work.github.io/Benchmate_doc_ccm
-aux_links: 
-  Template Repository: https://github.com/qin-work/Benchmate_doc_ccm
 
+# Theme configuration
 remote_theme: just-the-docs/just-the-docs@main
 plugins:
   - jekyll-remote-theme
+  - jekyll-seo-tag
+
+# Site settings
+theme: just-the-docs
+collections:
+  docs:
+    output: true
